# workcalendar

./: .dockerignore  .gitignore  Dockerfile  README.md  bootstrap.sh  devspace.yaml  manage.py  pyproject.toml
apps/track/: models.py  urls.py  views.py
apps/track/migrations/: 0001_initial.py  0002_alter_entry_day.py
apps/track/tests/: conftest.py  factories.py  test_models.py  test_views.py
backend/: Dockerfile  manage.py  setup.cfg
backend/apps/track/: apps.py  models.py  serializers.py
backend/apps/track/tests/: test_urls.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  api.ts
frontend/src/components/: CreateEntry.vue  EntryList.vue  HelloWorld.vue
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/views/: Entries.vue
frontend/tests/unit/store/: mutations.spec.ts
workcalendar/: asgi.py  settings.py  urls.py  wsgi.py
